--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,11 @@
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
+def AAVersion = '3.2'
 android {
     compileSdkVersion 21
     buildToolsVersion "20.0.0"
+
+
 
     defaultConfig {
         applicationId "com.example.damiank.pomyslna"
@@ -17,9 +20,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    apt "org.androidannotations:androidannotations:$AAVersion"
+    compile "org.androidannotations:androidannotations-api:$AAVersion"
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+
+}
+apt{
+    arguments {
+        androidManifestFile variant.processResources.manifestFile
+    }
 }
