--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.example.damiank.pomyslna.StartActivity_"
-            android:label="@string/app_name" >
+            android:name="com.example.damiank.pomyslna.StartActivity_">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,6 +20,7 @@
         <activity android:name="com.example.damiank.pomyslna.MenuActivity_"/>
         <activity android:name="com.example.damiank.pomyslna.MyRecActivity_"/>
         <activity android:name="com.example.damiank.pomyslna.OtherRecActivity_"/>
+        <activity android:name="com.example.damiank.pomyslna.LoginActivity_"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
