--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name="com.example.damiank.pomyslna.OpisActivity_"/>
         <activity android:name="com.example.damiank.pomyslna.RegisterActivity_"/>
         <activity android:name="com.example.damiank.pomyslna.ReadCommentActivity_"/>
+        <activity android:name="com.example.damiank.pomyslna.CommentActivity_"/>
         
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
